objects/Article_searches_views__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Article Searches and Views</relationshipLabel>
        <relationshipName>Article_Searches_and_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Articles_Viewed__c</fullName>
        <description>This field displays articles viewed by users on the customer portal.</description>
        <label>Articles Viewed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Article Searches and Views</relationshipLabel>
        <relationshipName>Article_Searches_and_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Session_Id__c</fullName>
        <label>Last Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Count__c</fullName>
        <description>This field indicates the number of searches a user performed within a given time-frame.</description>
        <label>Search Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Words__c</fullName>
        <description>This field logs words and terms searched via the customer portal per user.</description>
        <label>Search Words</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SessionId_Count__c</fullName>
        <label>SessionId Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Count__c</fullName>
        <description>This field displays the number of times a user viewed an article.</description>
        <label>View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Article Searches and Views</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>Search_Words__c</columns>
        <columns>Search_Count__c</columns>
        <columns>Articles_Viewed__c</columns>
        <columns>View_Count__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Searches and Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>